--- a/.pyup.yml
+++ b/.pyup.yml
@@ -1,8 +1,3 @@
-Update: all
-Search: True
-Pin: True
-Default Branch: master
-Branch pre-fix: pyup-
-Close PRs: True
-Label PRs: False
-Update hashes: True
+requirements:
+  - Pipfile
+  - Pipfile.lock
