--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -37,13 +37,12 @@ jobs:
         pipenv run flake8 .
     - name: Test with pytest
       run: |
-        pipenv run pytest
-#        pythonpro --cov=pythonpro
-#    - name: Posting Coverage
-#      env:
-#        CODECOV_TOKEN: "9e828504-3fc1-4501-a56c-5be55f7b5345"
-#      run: |
-#        pipenv run codecov
+        pipenv run pytest beats --cov=beats
+    - name: Posting Coverage
+      env:
+        CODECOV_TOKEN: "9e828504-3fc1-4501-a56c-5be55f7b5345"
+      run: |
+        pipenv run codecov
 
 #jobs:
 #  # Set the job key. The key is displayed as the job name
